Match-id-4a474c0d5e2f8cac7e86f861c1bf02c886f63d81

--- a/api/external/api-anti-ransomware.yaml
+++ b/api/external/api-anti-ransomware.yaml
@@ -16,6 +16,7 @@ produces:
 paths:
   /v1/anti-ransomware/policies:
     get:
+      x-auditor-role: 'Y'
       x-impact-subsystem: 不影响
       x-dp-admin-role: 'Y'
       x-sysadmin-role: 'Y'
@@ -407,7 +408,6 @@ definitions:
     title: AntiRansomwarePolicyReq
     required:
       - policyName
-      - clusterId
       - schedule
       - dataSourceType
       - resourceSubType
